--- a/contribute.html
+++ b/contribute.html
@@ -69,7 +69,7 @@
 					<p>Contributions are always welcome, no matter how small or large. 
 						<br/>You can do this in many ways: you can contribute code, make improvements to the DietPi documentation, participate in the discussion on our forum, report an issue or investigate existent ones on GitHub. This page provides everything you need to get started !</p>
 				</div>
-				<div id="title-2" class="container-xl centered">
+				<div id="title-2" class="title">
 					<h1>Grow in 2021</h1>
 					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the hardware and infrastructure costs. 
 						<br/><br/>
@@ -91,25 +91,27 @@
 
 				<!-- Start details for portfolio project 1 -->
 				<div id="slidingdiv1" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/lxde_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/lxde_1.jpg" alt="LXDE" loading="lazy"></a></div>
+					<div class="col-md-4">
+						<a href="images/contribute/diagnose.jpg" target="_blank" rel="noopener">
+							<img src="images/contribute/diagnose.jpg" alt="Bug report" loading="lazy">
+						</a>
+					</div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>LXDE</h3>
+								<h3>Create a new bug report</h3>
 								<span class="show_hide close fa fa-times"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/desktop/#lxde" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Ultra lightweight, fast and functional desktop</div>
-								<div><span>Cons:</span>TBA</div>
-							</div>
-							<p>Highly optimized lightweight desktop without the bloatware. If you are seeking a raw performance desktop, LXDE is all you need. One of the lightest and functional desktops available. One of our favourites!</p>
+							<p>Create a report, helping us to improve</p>
 							<div class="project-title"></div>
 							<br>
+                            <p>This has a template on <b style="color:orange"><a href="https://github.com/MichaIng/DietPi/issues/new/choose">GitHub</a></b></p>
 							<ul>
-								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
+								<li>Required Information</li>
+								<li>Additional Information (if applicable)</li>
+								<li>Steps to reproduce</li>
+								<li>Expected behaviour</li>
+								<li>Actual behaviour</li>
 							</ul>
 						</div>
 					</div>
@@ -2429,28 +2431,19 @@ Perfect for users requiring anonymity and privacy.</p>
 					<!-- Desktops -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv1">
-							<img src="images/dietpi-software/lxde_0.jpg" alt="LXDE" loading="lazy">
+							<img src="images/contribute/diagnose.jpg" alt="Report a new issue" loading="lazy">
 							<i class="more fa fa-plus"></i>
-							<h3>LXDE</h3>
-							<p>Ultra Lightweight Desktop</p>
-							<div class="mask"></div>
-						</a>
-					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
-						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv119">
-							<img src="images/dietpi-software/lxqt_0.jpg" alt="LXQt" loading="lazy">
-							<i class="more fa fa-plus"></i>
-							<h3>LXQt</h3>
-							<p>Lightweight Desktop</p>
+							<h3>Bug report</h3>
+							<p>Report an issue / bug</p>
 							<div class="mask"></div>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv2">
-							<img src="images/dietpi-software/mate_0.jpg" alt="project 2" loading="lazy">
+							<img src="images/contribute/diagnose.jpg" alt="Investigate bugs and issues on GitHub" loading="lazy">
 							<i class="more fa fa-plus"></i>
-							<h3>MATE</h3>
-							<p>Lightweight Desktop</p>
+							<h3>Diagnose issues</h3>
+							<p>Investigate bugs and issues on GitHub</p>
 							<div class="mask"></div>
 						</a>
 					</div>
