--- a/contribute.html
+++ b/contribute.html
@@ -102,43 +102,28 @@
 								<h3>Create a new bug report</h3>
 								<span class="show_hide close fa fa-times"></span>
 							</div>
-							<p>Create a report, helping us to improve</p>
-							<div class="project-title"></div>
-							<br>
-                            <p>This has a template on <b style="color:orange"><a href="https://github.com/MichaIng/DietPi/issues/new/choose">GitHub</a></b></p>
-							<ul>
-								<li>Required Information</li>
-								<li>Additional Information (if applicable)</li>
-								<li>Steps to reproduce</li>
-								<li>Expected behaviour</li>
-								<li>Actual behaviour</li>
-							</ul>
+							<p>Creating a bug report will help us improve. By providing required info, steps to replicate, and expected / actual behaviour you give us valuable info to understand the problem</p>
+                            <p>Report a new issue, using the template <b style="color:orange">GitHub</b></p>
 						</div>
 					</div>
 				</div>
 				<!-- End details for portfolio project 1 -->
+
 				<!-- Start details for portfolio project 2 -->
 				<div id="slidingdiv2" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/mate_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/mate_1.jpg" alt="MATE" loading="lazy"></a></div>
+					<div class="col-md-4">
+						<a href="images/contribute/investigate.jpg" target="_blank" rel="noopener">
+							<img src="images/contribute/investigate.jpg" alt="Diagnose" loading="lazy">
+						</a>
+					</div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>MATE</h3>
+								<h3>Investigate issues / Provide help</h3>
 								<span class="show_hide close fa fa-times"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/desktop/#mate" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Lightweight, feature-rich</div>
-								<div><span>Cons:</span>TBA</div>
-							</div>
-							<p>Popular Gnome2 (a time when Gnome wasn't obsessively bloated) based desktop environment.</p>
-							<div class="project-title"></div>
-							<br>
-							<ul>
-								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
-							</ul>
+							<p>Many times the DietPi project needs help to run a investigation, add more details to existent bugs or requests, or answer a question.</p>
+							<p>Check the <b style="color:orange">DietPi GitHub issue</b> or <b style="color:orange">DietPi Documentation</b></p>
 						</div>
 					</div>
 				</div>
@@ -2440,7 +2425,7 @@ Perfect for users requiring anonymity and privacy.</p>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv2">
-							<img src="images/contribute/diagnose.jpg" alt="Investigate bugs and issues on GitHub" loading="lazy">
+							<img src="images/contribute/investigate.jpg" alt="Investigate bugs and issues on GitHub" loading="lazy">
 							<i class="more fa fa-plus"></i>
 							<h3>Diagnose issues</h3>
 							<p>Investigate bugs and issues on GitHub</p>
