--- a/contribute.html
+++ b/contribute.html
@@ -92,8 +92,8 @@
 				<!-- Start details for portfolio project 1 -->
 				<div id="slidingdiv1" class="toggleDiv row single-project">
 					<div class="col-md-4">
-						<a href="images/contribute/diagnose.jpg" target="_blank" rel="noopener">
-							<img src="images/contribute/diagnose.jpg" alt="Bug report" loading="lazy">
+						<a href="images/contribute/diagnose2.jpg" target="_blank" rel="noopener">
+							<img src="images/contribute/diagnose2.jpg" alt="Bug report" loading="lazy">
 						</a>
 					</div>
 					<div class="col-md-8">
@@ -102,8 +102,8 @@
 								<h3>Create a new bug report</h3>
 								<span class="show_hide close fa fa-times"></span>
 							</div>
-							<p>Creating a bug report will help us improve. By providing required info, steps to replicate, and expected / actual behaviour you give us valuable info to understand the problem</p>
-                            <p>Report a new issue, using the template <b style="color:orange">GitHub</b></p>
+							<p>Creating a bug report helps us improve. Providing required info, steps to replicate, and expected vs. actual behaviour you give us valuable info to understand the problem.</p>
+                            <p>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub issue</a>.</p>
 						</div>
 					</div>
 				</div>
@@ -122,8 +122,15 @@
 								<h3>Investigate issues / Provide help</h3>
 								<span class="show_hide close fa fa-times"></span>
 							</div>
-							<p>Many times the DietPi project needs help to run a investigation, add more details to existent bugs or requests, or answer a question.</p>
-							<p>Check the <b style="color:orange">DietPi GitHub issue</b> or <b style="color:orange">DietPi Documentation</b></p>
+							<p>Many times the DietPi project needs help on existent items:
+								<ul>
+									<li>Run an investigation (e.g. an installation issue on specific software title)</li>
+									<li>Help wanted (e.g. a driver installation for a specific SBC, or a performance tweak etc.)</li>								
+									<li>Provide an workaround to an existent issue</li>
+									<li>Give help when testing is required</li>
+									<li>or Answer a question</li>								
+								</ul>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -2416,7 +2423,7 @@ Perfect for users requiring anonymity and privacy.</p>
 					<!-- Desktops -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv1">
-							<img src="images/contribute/diagnose.jpg" alt="Report a new issue" loading="lazy">
+							<img src="images/contribute/diagnose2.jpg" alt="Report a new issue" loading="lazy">
 							<i class="more fa fa-plus"></i>
 							<h3>Bug report</h3>
 							<p>Report an issue / bug</p>
@@ -2425,7 +2432,7 @@ Perfect for users requiring anonymity and privacy.</p>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv2">
-							<img src="images/contribute/investigate.jpg" alt="Investigate bugs and issues on GitHub" loading="lazy">
+							<img src="images/contribute/investigate.jpg" alt="Investigate / Help" loading="lazy">
 							<i class="more fa fa-plus"></i>
 							<h3>Diagnose issues</h3>
 							<p>Investigate bugs and issues on GitHub</p>
