--- a/contribute.html
+++ b/contribute.html
@@ -99,11 +99,13 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Create a new bug report</h3>
+								<h3>Create a new bug report / Report a security issue</h3>
 								<span class="show_hide close fa fa-times"></span>
 							</div>
 							<p>Creating a bug report helps us improve. Providing required info, steps to replicate, and expected vs. actual behaviour you give us valuable info to understand the problem.</p>
-                            <p>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub issue</a>.</p>
+							<p>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub issue</a>.</p>
+							<br>
+							<p>Security is on top of our list. Please report any security vulnerability shipped with our images or created by our scripts (in /boot/dietpi/). Please find more details in our <a href="https://github.com/MichaIng/DietPi/security/policy" target="_blank" rel="noopener">Security Policy</a>.</p>
 						</div>
 					</div>
 				</div>
@@ -2423,10 +2425,10 @@ Perfect for users requiring anonymity and privacy.</p>
 					<!-- Desktops -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv1">
-							<img src="images/contribute/diagnose2.jpg" alt="Report a new issue" loading="lazy">
+							<img src="images/contribute/diagnose2.jpg" alt="Report an issue" loading="lazy">
 							<i class="more fa fa-plus"></i>
-							<h3>Bug report</h3>
-							<p>Report an issue / bug</p>
+							<h3>Report an issue</h3>
+							<p>Bug or security issue</p>
 							<div class="mask"></div>
 						</a>
 					</div>
@@ -2435,7 +2437,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/contribute/investigate.jpg" alt="Investigate / Help" loading="lazy">
 							<i class="more fa fa-plus"></i>
 							<h3>Diagnose issues</h3>
-							<p>Investigate bugs and issues on GitHub</p>
+							<p>Investigate & Help</p>
 							<div class="mask"></div>
 						</a>
 					</div>
