draft change contribute

--- a/contribute.html
+++ b/contribute.html
@@ -102,9 +102,9 @@
 								<h3>Create a new bug report / Report a security issue</h3>
 								<span class="show_hide close fa fa-times"></span>
 							</div>
-							<p>Creating a bug report helps us improve. Providing required info, steps to replicate, and expected vs. actual behaviour you give us valuable info to understand the problem.</p>
-							<p>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub issue</a>.</p>
-							<br>
+							<p>Creating a bug report helps us improve. Providing required info, steps to replicate, and expected vs. actual behaviour you give us valuable info to understand the problem.
+							   <br/><br/>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub issue</a>.
+							</p>
 							<p>Security is on top of our list. Please report any security vulnerability shipped with our images or created by our scripts (in /boot/dietpi/). Please find more details in our <a href="https://github.com/MichaIng/DietPi/security/policy" target="_blank" rel="noopener">Security Policy</a>.</p>
 						</div>
 					</div>
@@ -132,6 +132,7 @@
 									<li>Give help when testing is required</li>
 									<li>or Answer a question</li>								
 								</ul>
+								<br/><br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or <a href="https://github.com/MichaIng/DietPi-Docs/issues" target="_blank" rel="noopener">DietPi documentation tasks on GitHub</a>.
 							</p>
 						</div>
 					</div>
