--- a/contribute.html
+++ b/contribute.html
@@ -103,9 +103,9 @@
 								<span class="show_hide close fa fa-times"></span>
 							</div>
 							<p>Creating a bug report helps us improve. Providing required info, steps to replicate, and expected vs. actual behaviour you give us valuable info to understand the problem.
-							   <br/><br/>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub issue</a>.
+							   <br/><br/>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new?template=bug_report.md" target="_blank" rel="noopener">GitHub issue</a>.
+							   <br/><br/>Security is on top of our list. Please report any security vulnerability shipped with our images or created by our scripts (in /boot/dietpi/). Please find more details in our <a href="https://github.com/MichaIng/DietPi/security/policy" target="_blank" rel="noopener">Security Policy</a>.
 							</p>
-							<p>Security is on top of our list. Please report any security vulnerability shipped with our images or created by our scripts (in /boot/dietpi/). Please find more details in our <a href="https://github.com/MichaIng/DietPi/security/policy" target="_blank" rel="noopener">Security Policy</a>.</p>
 						</div>
 					</div>
 				</div>
@@ -127,38 +127,28 @@
 							<p>Many times the DietPi project needs help on existent items:
 								<ul>
 									<li>Run an investigation (e.g. an installation issue on specific software title)</li>
-									<li>Help wanted (e.g. a driver installation for a specific SBC, or a performance tweak etc.)</li>								
 									<li>Provide an workaround to an existent issue</li>
 									<li>Give help when testing is required</li>
-									<li>or Answer a question</li>								
 								</ul>
-								<br/><br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or <a href="https://github.com/MichaIng/DietPi-Docs/issues" target="_blank" rel="noopener">DietPi documentation tasks on GitHub</a>.
+								<br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or <a href="https://github.com/MichaIng/DietPi-Docs/issues" target="_blank" rel="noopener">DietPi documentation tasks on GitHub</a>.
 							</p>
 						</div>
 					</div>
 				</div>
 				<!-- Start details for portfolio project 3 -->
 				<div id="slidingdiv3" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/xfce_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/xfce_1.jpg" alt="Xfce" loading="lazy"></a></div>
+					<div class="col-md-4">
+						<a href="images/contribute/question.jpg" target="_blank" rel="noopener">
+							<img src="images/contribute/question.jpg" alt="Question" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Xfce</h3>
+								<h3>Give help / Answer questions</h3>
 								<span class="show_hide close fa fa-times"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/desktop/#xfce" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Lightweight, feature-rich</div>
-								<div><span>Cons:</span>Reduced performance, when compared to LXDE/MATE.</div>
-							</div>
-							<p>A popular lightweight desktop. Does not perform as well as LXDE/MATE.</p>
-							<div class="project-title"></div>
-							<br>
-							<ul>
-								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
-							</ul>
+							<p>Sometimes there are open questions where you could know the answer. Or help is needed for a specific installation (e.g. a driver installation for a specific SBC, or a check of a performance tweak etc.)
+								<br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> and find these items.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -2444,10 +2434,10 @@ Perfect for users requiring anonymity and privacy.</p>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv3">
-							<img src="images/dietpi-software/xfce_0.jpg" alt="project 3" loading="lazy">
+							<img src="images/contribute/question.jpg" alt="project 3" loading="lazy">
 							<i class="more fa fa-plus"></i>
-							<h3>Xfce</h3>
-							<p>Lightweight Desktop</p>
+							<h3>Help / Questions</h3>
+							<p>Answer questions</p>
 							<div class="mask"></div>
 						</a>
 					</div>
