--- a/contribute.html
+++ b/contribute.html
@@ -146,8 +146,9 @@
 								<h3>Give help / Answer questions</h3>
 								<span class="show_hide close fa fa-times"></span>
 							</div>
-							<p>Sometimes there are open questions where you could know the answer. Or help is needed for a specific installation (e.g. a driver installation for a specific SBC, or a check of a performance tweak etc.)
-								<br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> and find these items.
+							<p>Sometimes there are open questions where you could know the answer. 
+								<br/>Or help is needed for a specific installation (e.g. a driver installation for a specific SBC, or a check of a performance tweak etc.)
+								<br/><br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> and find these items.
 							</p>
 						</div>
 					</div>
