--- a/contribute.html
+++ b/contribute.html
@@ -71,15 +71,8 @@
 				</div>
 				<div id="title-2" class="title">
 					<h1>Grow in 2021</h1>
-					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for: 
-						<br/>
-						<ul>
-							<li>Future development. Allowing us to continue working on DietPi and make it better and better with each update.</li>
-							<li>MicroSD cards. We go through a vast amount of media cards due to vigorous testing of the images.</li>
-							<li>USB Card Readers. They are not designed to be repeatly used on daily basis and often fail, requiring a replacement.</li>
-							<li>Domain name renewal and webhosting for Dietpi.com, documentation, testing services etc.</li>
-							<li>Purchase new and exciting boards, so we can implement a DietPi image and support it.</li>
-						</ul>
+					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b style="color:orange">even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, MicroSD cards etc.), webhosting for Dietpi.com and future development. This allows us to continue working on DietPi, make it better with every new update.
+						<img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy">
 						<br/><br/>
 						In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimizations. Enable us to grow more in 2021 !
 					</p>
