--- a/contribute.html
+++ b/contribute.html
@@ -66,8 +66,7 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none"><polygon points="0,0 100,0 50,100"/></svg>
 				<div id="title-1" class="title">
 					<h1>Contribute to DietPi</h1>
-					<p>Contributions are always welcome, no matter how small or large. 
-						<br/>You can do this in many ways: you can contribute code, make improvements to the DietPi documentation, participate in the discussion on our forum, report an issue or investigate existent ones on GitHub. This page provides everything you need to get started !</p>
+					<p>Contributions are always welcome, no matter how small or large. You can do this in many ways and this page provides everything you need to get started !</p>
 				</div>
 				<div id="title-2" class="title">
 					<h1>Grow in 2021</h1>
