--- a/contribute.html
+++ b/contribute.html
@@ -71,10 +71,11 @@
 				<div id="title-2" class="title">
 					<h1>Grow in 2021</h1>
 					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b style="color:orange">even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, MicroSD cards etc.), webhosting for Dietpi.com and future development. 
-						<br/> This allows us to continue working on DietPi, make it better with every new update.
+						<br/><br/> This allows us to continue working on DietPi, make it better with every new update.
 						<br/><br/><img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy"  width="200">
 						<br/><br/>
-						In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimizations. Enable us to grow more in 2021 !
+						In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimizations. 
+						<br/><br/> Enable us to grow more in 2021 !
 					</p>
 					<p class="medium-text">
 						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DVBECXRW3TAA" class="button" target="_blank" rel="noopener">Donate via PayPal</a>
