--- a/contribute.html
+++ b/contribute.html
@@ -75,7 +75,7 @@
 						<br/><br/><img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy"  width="200">
 						<br/><br/>
 						In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimizations. 
-						<br/><br/> Enable us to grow more in 2021 !
+						<br/><b>Enable us to grow in 2021 !</b>
 					</p>
 					<p class="medium-text">
 						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DVBECXRW3TAA" class="button" target="_blank" rel="noopener">Donate via PayPal</a>
