--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
 				<div id="slidingdiv25" class="toggleDiv single-project">
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
-							<h3>Firefly RK3399 (beta)</h3>
+							<h3>Firefly RK3399</h3>
 							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
@@ -914,7 +914,7 @@
 				<div id="slidingdiv26" class="toggleDiv single-project">
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
-							<h3>NanoPi NEO2 Black (beta)</h3>
+							<h3>NanoPi NEO2 Black</h3>
 							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
@@ -969,7 +969,7 @@
 				<div id="slidingdiv28" class="toggleDiv single-project">
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
-							<h3>PINE H64 (beta)</h3>
+							<h3>PINE H64</h3>
 							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
@@ -1165,7 +1165,7 @@
 				<div id="slidingdiv35" class="toggleDiv single-project">
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
-							<h3>ROCK Pi S (beta)</h3>
+							<h3>ROCK Pi S</h3>
 							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
@@ -1272,7 +1272,7 @@
 				<div id="slidingdiv39" class="toggleDiv single-project">
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
-							<h3>NanoPi NEO3 (beta)</h3>
+							<h3>NanoPi NEO3</h3>
 							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
@@ -1299,7 +1299,7 @@
 				<div id="slidingdiv40" class="toggleDiv single-project">
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
-							<h3>NanoPi R2S (beta)</h3>
+							<h3>NanoPi R2S</h3>
 							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
@@ -1326,7 +1326,7 @@
 				<div id="slidingdiv41" class="toggleDiv single-project">
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
-							<h3>NanoPi K2 (beta)</h3>
+							<h3>NanoPi K2</h3>
 							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
