Align software docs links

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -1878,7 +1878,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="https://dietpi.com/docs/software/webserver_stack/#apache2" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="https://dietpi.com/docs/software/webserver_stack/#apache2" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a>
 								</div>
 								<div>
 									<br>
@@ -1904,7 +1904,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="https://dietpi.com/docs/software/webserver_stack/#nginx" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="https://dietpi.com/docs/software/webserver_stack/#nginx" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a>
 								</div>
 								<div>
 									<br>
@@ -1930,7 +1930,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="https://dietpi.com/docs/software/webserver_stack/#lighttpd" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="https://dietpi.com/docs/software/webserver_stack/#lighttpd" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a>
 								</div>
 								<div>
 									<br>
@@ -1956,7 +1956,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="https://dietpi.com/docs/software/webserver_stack/#phpmyadmin" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="https://dietpi.com/docs/software/webserver_stack/#phpmyadmin" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a>
 								</div>
 							</div>
 							<p>Web interface SQL admin tool for web server installations. </p>
@@ -1974,7 +1974,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="https://dietpi.com/docs/software/system_security/#lets-encrypt" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="https://dietpi.com/docs/software/system_security/#lets-encrypt" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a>
 								</div>
 								<div>
 									<br>
@@ -1999,7 +1999,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="https://dietpi.com/docs/software/webserver_stack/#tomcat" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="https://dietpi.com/docs/software/webserver_stack/#tomcat" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a>
 								</div>
 							</div>
 							<p>Tomcat is a Servlet and JSP Server serving Java technologies. In your Java project you can build your WAR (short for <code>Web ARchive</code>) file, and simply drop it in the deploy directory in Tomcat. </p>
