--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<div class="container-xl">
 				<img class="scrollup" src="images/dietpi-logo_240x80.png" alt="DietPi logo" loading="lazy">
 				<!-- Navigation button, visible on small resolution -->
-				<button class="navbar-toggler fa fa-bars" data-toggle="collapse" data-target=".navbar-collapse"></button>
+				<button class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse"><svg viewBox="0 0 12 12"><path d="M1 1h10M1 6h10M1 11h10"/></svg></button>
 				<!-- Main navigation -->
 				<div class="navbar-nav navbar-collapse collapse">
 					<a class="nav-link" href="#home">Home</a>
@@ -1870,7 +1870,7 @@
 		</div>
 		<!-- Footer section end -->
 		<!-- Scroll up button start -->
-		<a class="scrollup fa fa-chevron-up" href="#"></a>
+		<a class="scrollup" href="#"><svg viewBox="0 0 12 12"><path d="M1 8l5-5l5 5"/></svg></a>
 		<!-- Scroll up button end -->
 	</body>
 </html>
