--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
 			body {
 				color: #ffffff;
 				background-color: #181a1c;
-				font-family: Verdana, Arial, Helvetica, sans-serif;
+				font-family: Arial, sans-serif;
 				text-align: center;
 			}
 			h1, h2 {
@@ -45,12 +45,12 @@
 			img, svg {
 				width: 150px;
 				height: 150px;
-				background: #ffffff;
-				border-radius: 500px;
+				fill: #ffffff;
+				background-color: #000000;
+				border-radius: 50%;
 				border: 3px solid #ffffff;
 			}
 			img:hover, svg:hover {
-				background: #c5ff00;
 				border-color: #c5ff00;
 			}
 			a {
@@ -67,21 +67,21 @@
 	<body>
 		<h1>404 Not Found</h1>
 		<h2>The requested URL is not available. You might find what you are looking for at one of the following sites:</h2>
-		<a href="/">
+		<a href="https://dietpi.com/">
 			<img src="/images/dietpi-logo_180x180.png" alt="Home" loading="lazy">
 			<h3>DietPi Website</h3>
 		</a>
-		<a href="/docs/">
+		<a href="https://dietpi.com/docs/">
 			<img src="/images/gettingstarted.png" alt="HowTo" loading="lazy">
 			<h3>DietPi Docs</h3>
 		</a>
-		<a href="/phpbb/">
+		<a href="https://dietpi.com/phpbb/">
 			<img src="/images/forum.png" alt="Community" loading="lazy">
 			<h3>DietPi Forums</h3>
 		</a>
 		<a href="https://github.com/MichaIng/DietPi">
-			<svg viewBox="0 0 16 16">
-				<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+			<svg viewBox="0 0 16 16" style="background-color: #fff;">
+				<path fill="#000" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
 			</svg>
 			<h3>GitHub repo</h3>
 		</a>
