Do not load obsolete fonts.css
Minor triangle enhancements: Added aria-hidden="true" to hide it for accessibility readers

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -34,7 +34,6 @@
 		<meta name="theme-color" content="#000000">
 		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/fonts.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.min.css">
 		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
@@ -64,7 +63,7 @@
 		<!-- Portfolio section start -->
 		<div class="section secondary-section" id="download">
 			<div class="container-xl software">
-				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none"><polygon points="0,0 100,0 50,100"/></svg>
+				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<div class="title">
 					<h1>DietPi-Software</h1>
 					<p>Easily install optional "ready to run" and optimized software for your device. As well as automating the Linux installation and configuration process for you, DietPi-Software also applies specific optimizations unique to your hardware model, ensuring you get the maximum performance from your device.</p>
@@ -3496,7 +3495,7 @@ Perfect for users requiring anonymity and privacy.</p>
 		<!-- Footer section start -->
 		<div class="section primary-section footer" id="contact">
 			<div class="container-xl">
-				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none"><polygon points="0,0 100,0 50,100"/></svg>
+				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<div class="social">
 					<a href="https://twitter.com/DietPi_" target="_blank" rel="noopener">
 						<svg viewBox="0 0 400 400" aria-hidden="true">
